--- a/index.html
+++ b/index.html
@@ -1,9 +1,60 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio</title>
+    <title>Benjamin Haber</title>
+    <link rel="icon" href="logo.png" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Welcome to My Portfolio</h1>
+    <nav>
+      <a href="/" class="font-title"> Benjamin Haber </a>
+    </nav>
+    <main>
+      <h1>Welcome to My Portfolio</h1>
+
+      <ul class="main-nav">
+        <li class="mb-2">
+          <div>
+            👨‍💻
+            <a class="text-xl link ml-1" href="/about" target=""> About </a>
+          </div>
+        </li>
+
+        <li class="mb-2">
+          <div>
+            💻
+            <a class="text-xl link ml-1" href="/dev" target="">
+              Software Development
+            </a>
+          </div>
+        </li>
+
+        <li class="mb-2">
+          <div>
+            🎥
+            <a class="text-xl link ml-1" href="/film" target=""> Filmmaking </a>
+          </div>
+        </li>
+
+        <li class="mb-2">
+          <div>
+            🕹️
+            <a
+              class="text-xl link ml-1"
+              href="https://chillgames.net"
+              target="_blank"
+            >
+              Games
+            </a>
+          </div>
+        </li>
+
+        <li class="mb-2">
+          <div>
+            📝
+            <a class="text-xl link ml-1" href="/blog" target=""> Blog </a>
+          </div>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
