add breadcrumbs & color scheme

--- a/about/index.html
+++ b/about/index.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
       <img
         src="https://vibecheck.imgix.net/portfolio/me.png?w=640&h=720&fit=crop&s=bc3c52a00d9f2677e5dc459d20326070"
