--- a/dev/index.html
+++ b/dev/index.html
@@ -6,14 +6,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
       <h1>Engineering Portfolio</h1>
 
       <div class="dev-list-item">
-        <a href="/dev/chill-games" class="dev-list-item-title">
+        <a href="/dev/chill-games" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-chill-games?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;894f1b5c19605f853cffee547978900e"
           />
@@ -52,7 +58,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/brex" class="dev-list-item-title">
+        <a href="/dev/brex" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-brex?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;329e34752ca3965edf3ae35dcd1cc549"
           />
@@ -94,7 +100,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/off-topic-forum" class="dev-list-item-title">
+        <a href="/dev/off-topic-forum" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-off-topic-forum?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;a9de6c6dfcb2c329605254286f219d35"
           />
@@ -133,7 +139,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/mantra-health" class="dev-list-item-title">
+        <a href="/dev/mantra-health" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-mantra-health?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;69572820b818d07b8d70a9087f2e2d1c"
           />
@@ -172,7 +178,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/teja-rose" class="dev-list-item-title">
+        <a href="/dev/teja-rose" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-teja-rose?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;3a285cd75b80d79d55e7683ac4d82837"
           />
@@ -207,7 +213,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/cscg-org" class="dev-list-item-title">
+        <a href="/dev/cscg-org" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-cscg-org?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;5b3fa989d3494d88e162d0ba171b9d3f"
           />
@@ -242,7 +248,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/sokoban" class="dev-list-item-title">
+        <a href="/dev/sokoban" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-sokoban?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;5916f115c7a4ed41f7076c0e1889bc77"
           />
@@ -307,7 +313,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/lift-rocket" class="dev-list-item-title">
+        <a href="/dev/lift-rocket" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-lift-rocket?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;b57a311fd0eff84fc2cfefb307ced092"
           />
@@ -346,7 +352,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/cornelia-haber" class="dev-list-item-title">
+        <a href="/dev/cornelia-haber" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-cornelia-haber?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;c832fbe821f155941a20ddc5c89c28a6"
           />
@@ -385,7 +391,7 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/vibecheck" class="dev-list-item-title">
+        <a href="/dev/vibecheck" class="dev-list-item-title no-underline">
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-vibecheck?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;4b2f0818880ad16c419a7c32dfd04c23"
           />
@@ -424,7 +430,10 @@
         </div>
       </div>
       <div class="dev-list-item">
-        <a href="/dev/sunset-simulator" class="dev-list-item-title">
+        <a
+          href="/dev/sunset-simulator"
+          class="dev-list-item-title no-underline"
+        >
           <img
             src="https://vibecheck.imgix.net/portfolio/dev-icon-sunset-simulator?ixlib&#x3D;js-3.8.0&amp;w&#x3D;64&amp;h&#x3D;64&amp;fit&#x3D;crop&amp;s&#x3D;c011aaf72994bbc04dd472d898d7625b"
           />
