--- a/dev/lift-rocket/index.html
+++ b/dev/lift-rocket/index.html
@@ -6,9 +6,17 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+        <a href="/dev" class="link"> Dev </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
       <div class="dev-page-header">
         <h1>Lift Rocket</h1>
