--- a/film/half-wit/index.html
+++ b/film/half-wit/index.html
@@ -6,11 +6,19 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+        <a href="/film" class="link"> Film </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
-      <h2>Half-Wit</h2>
+      <h1>Half-Wit</h1>
       <p class="mb-2">
         Two cloutchasers embark on a journey of self discovery after deciding to
         become drug dealers.
