--- a/film/index.html
+++ b/film/index.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
       <h1>Film</h1>
 
@@ -25,7 +31,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/half-wit">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-half-wit?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;8425a7ff15b5bcf52d541c523f33c38d"
@@ -38,7 +43,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/leone">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-leone?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;3435fbae639238b1f5e56b3e2988e43f"
@@ -51,7 +55,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/swysh">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-swysh?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;77762eb0e3b7808a409de448bb89132f"
@@ -64,7 +67,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/alley-of-death">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-alley-of-death?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;7a58d2f948baa4169263330760c89f92"
@@ -77,7 +79,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/life-is-art">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-life-is-art?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;cfac4d3cc0b9aa52e1aa8542bb395e65"
@@ -90,7 +91,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/with-you">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-with-you?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;96d03f7bee8ef794779f1175c57b59ef"
@@ -103,7 +103,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/yadda">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-yadda?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;449b8e9081503336e91e8205cfb11bf8"
@@ -116,7 +115,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/oats">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-oats?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;d8a2bc05eba31db53b467dfd4790a62f"
@@ -129,7 +127,6 @@
             </div>
           </div>
         </a>
-
         <a class="film-item" href="/film/flicker">
           <img
             src="https://vibecheck.imgix.net/portfolio/film-poster-flicker?ixlib&#x3D;js-3.8.0&amp;w&#x3D;640&amp;h&#x3D;360&amp;fit&#x3D;crop&amp;s&#x3D;b205dbd1a8499dacb934e4c48dbe3ec7"
