--- a/index.html
+++ b/index.html
@@ -3,56 +3,53 @@
     <title>Benjamin Haber</title>
     <link rel="icon" href="logo.png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="home/style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+    </header>
     <main>
       <h1>Welcome to My Portfolio</h1>
 
-      <ul class="main-nav">
-        <li class="mb-2">
-          <div>
-            👨‍💻
-            <a class="text-xl link ml-1" href="/about" target=""> About </a>
-          </div>
+      <ul>
+        <li class="about">
+          <a class="text-xl link" href="/about" target=""> About </a>
         </li>
 
-        <li class="mb-2">
-          <div>
-            💻
-            <a class="text-xl link ml-1" href="/dev" target="">
-              Software Development
-            </a>
-          </div>
+        <li class="computer">
+          <a class="text-xl link" href="/dev" target="">
+            Software Development
+          </a>
         </li>
 
-        <li class="mb-2">
-          <div>
-            🎥
-            <a class="text-xl link ml-1" href="/film" target=""> Filmmaking </a>
-          </div>
+        <li class="film">
+          <a class="text-xl link" href="/film" target=""> Filmmaking </a>
+
+          <ul>
+            <li class="arrow">
+              <a class="text-lg link ml-1" href="/film" target="">
+                Directing
+              </a>
+            </li>
+            <li class="arrow">
+              <a class="text-lg link ml-1" href="/sets" target="">
+                Set experience
+              </a>
+            </li>
+          </ul>
         </li>
 
-        <li class="mb-2">
-          <div>
-            🕹️
-            <a
-              class="text-xl link ml-1"
-              href="https://chillgames.net"
-              target="_blank"
-            >
-              Games
-            </a>
-          </div>
+        <li class="game">
+          <a class="text-xl link" href="https://chillgames.net" target="_blank">
+            Games
+          </a>
         </li>
 
-        <li class="mb-2">
-          <div>
-            📝
-            <a class="text-xl link ml-1" href="/blog" target=""> Blog </a>
-          </div>
+        <li class="blog">
+          <a class="text-xl link" href="/blog" target=""> Blog </a>
         </li>
       </ul>
     </main>
