--- a/film/alley-of-death/index.html
+++ b/film/alley-of-death/index.html
@@ -6,11 +6,19 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+        <a href="/film" class="link"> Film </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
-      <h2>Alley of Death</h2>
+      <h1>Alley of Death</h1>
       <p class="mb-2">
         A homeless veteran reflects on his struggles with alcoholism.
       </p>
