--- a/film/good-trip/index.html
+++ b/film/good-trip/index.html
@@ -6,11 +6,19 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+        <a href="/film" class="link"> Film </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
-      <h2>Good Trip</h2>
+      <h1>Good Trip</h1>
       <p class="mb-2">
         A Twitch streamer takes a trip down memory lane when he spends a day
         outside with some old friends.
