--- a/film/leone/index.html
+++ b/film/leone/index.html
@@ -6,11 +6,19 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+        <a href="/film" class="link"> Film </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
-      <h2>Leone</h2>
+      <h1>Leone</h1>
       <p class="mb-2">A lone wanderer searches for a pack of cigarettes.</p>
 
       <iframe
