--- a/film/life-is-art/index.html
+++ b/film/life-is-art/index.html
@@ -6,11 +6,19 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" class="font-title"> Benjamin Haber </a>
-    </nav>
+    <header>
+      <nav>
+        <a href="/" class="font-title"> Benjamin Haber </a>
+      </nav>
+      <div class="breadcrumbs">
+        <a href="/" class="link"> Home </a>
+        <span> / </span>
+        <a href="/film" class="link"> Film </a>
+        <span> / </span>
+      </div>
+    </header>
     <main>
-      <h2>Life Is Art</h2>
+      <h1>Life Is Art</h1>
       <p class="mb-2">Harrison Gilman paints us a picture.</p>
 
       <iframe
